# NET4103-Homework

./: Homework_NET4103.ipynb  pyproject.toml
TP2/: Lab 2.ipynb
TP3/: Lab 3.ipynb
TP4/: Lab 4.ipynb
TP5/: Lab5 - MF.ipynb
data/: Bowdoin47.gml  Caltech36.gml  Haverford76.gml  Reed98.gml  Simmons81.gml  Swarthmore42.gml  USFCA72.gml
