[project]
name = "net4103-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "progressbar>=2.5",
    "progressbar2>=4.5.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
]
